# AI-Keeper

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  aip-controllers-reconcile.md  aip-crd-openapi.md  aip-overview.md  aip-scenarios.html  aip-scenarios.md  buf.gen.yaml  buf.yaml  eslint.config.mjs  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: e2e.yml  images.yml  kubeconform.yml  lint.yml  redteam.yml  unit.yml
cmd/aik-airgap-pack/: main.go  packager.go  packager_test.go
cmd/aik-audit/: main.go  replication.go  replication_test.go
cmd/aik-gateway/: auth.go  gateway.go  gateway_test.go  main.go  ratelimit.go  secret.go  trace.go
cmd/aik-marketplace/: billing.go  billing_test.go  main.go  pbt_property36_test.go  publish.go  publish_test.go  review.go  review_test.go  server.go  server_test.go  store.go
cmd/aik-pdp/: client.go  cross_region_sync.go  cross_region_sync_test.go  main.go  offline_bundle.go  offline_bundle_test.go  server.go  server_test.go  store.go
cmd/aik-router/: cel.go  pbt_property33_test.go  provider.go  region_routing.go  region_routing_test.go  router.go  router_test.go
cmd/aikctl/: airgap.go  airgap_test.go  main.go
cmd/manager/: main.go  manager_test.go
console/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
controllers/: pbt_property1_test.go  pbt_property2_test.go  pbt_property3_test.go  pbt_property5_test.go
controllers/agent/: doc.go  reconciler.go  reconciler_test.go  setup_watches.go  skill_resolver.go  state.go  stubs.go
controllers/budget/: cost_tracker.go  doc.go  reconciler.go  reconciler_test.go  state.go
controllers/common/: backoff.go  backoff_test.go  conditions.go  conditions_test.go  doc.go  eventbus.go  eventbus_test.go  finalizer.go  finalizer_test.go
controllers/datasource/: connector.go  doc.go  reconciler.go  reconciler_test.go  state.go
controllers/knowledgebase/: doc.go  pipeline.go  reconciler.go  reconciler_test.go  state.go
controllers/modelendpoint/: doc.go  prober.go  reconciler.go  reconciler_test.go  state.go
controllers/modelrouter/: doc.go  pusher.go  reconciler.go  reconciler_test.go  state.go  table.go
controllers/policy/: compiler_iface.go  conflict_iface.go  doc.go  pdp_client.go  reconciler.go  reconciler_test.go  state.go  syntax.go  syntax_test.go
controllers/quota/: doc.go  reconciler.go  reconciler_test.go  state.go
controllers/serviceaccount/: doc.go  identity_broker.go  reconciler.go  reconciler_test.go  state.go
controllers/skill/: doc.go  jsonschema.go  reconciler.go  reconciler_test.go  registry.go  resolver_iface.go  setup_watches.go  state.go
controllers/tenant/: doc.go  (+5 more)
dataplane/eval/: pyproject.toml
dataplane/eval/aip_eval/: __init__.py  loader.py  metrics.py  redteam.py  runner.py
dataplane/eval/tests/: test_redteam.py  test_runner.py
docs/: architecture.md  p2-architecture.md  quickstart.md
hack/: kubeconform-precommit.sh
(+644 files in other folders)
