[project]
name = "aip-eval"
version = "0.1.0"
description = "AIP Eval Runner — offline evaluation via DeepEval metrics"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "The AIP Authors" }]
dependencies = [
  "deepeval>=1.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aip_eval"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
